src/components/Search/Search.css
.search {
    background-color: var(--color-background-empty);
    margin: 5px 5px 0 5px;
    width: min-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--color-text-empty);
}

.search-bar {
    display: flex;
    width: 50%;
}

.search-bar-input {
    padding: 10px 10px 10px 4px;
    background-color: var(--color-background-empty-light);
    border: 1px solid var(--color-background-2);
    border-radius: var(--radius-button);
    color: var(--color-text-empty);
}

.search-bar-input:hover {
    border: 1px solid var(--color-background-2);
}

.search-bar-input::placeholder {
    color: var(--color-text-empty);
}

.search-button {
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--color-background-2);
    border: 1px solid var(--color-background-empty);
    min-width: 25px;
    background-color: var(--color-border);
    border-radius: var(--radius-button);
}

.search-button:hover {
    cursor: pointer;
    border: 1px solid var(--color-background)
}

.search-filter {
    display: flex;
    flex-direction: column;
    width: 35%;
}

.search-functions {
    height: 50px;
    width: 320px;
    max-width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.search-info {
    margin-bottom: 5px;
    text-align: center;
}

.search-info-number {
    font-weight: 500;
    color: var(--color-border);
}

.search-info-ups {
    text-decoration: underline;
}

.search-term {
    font-style: italic;
    font-weight: 700;
}

#filter-select {
    width: 100%;
    border: 1px solid var(--color-background-2);
    padding: 10px 0 10px 10px;
    border-radius: var(--radius-button);
    background-color: var(--color-background-empty-light);
    color: var(--color-text-empty);
}

#filter-select:hover {
    border: 1px solid var(--color-background-2);
    cursor: pointer;
}

@media only screen and (max-width: 600px) {
    .search {
        width: 95%;
    }

    .search-info {
    }
}

@media only screen and (max-width: 400px) {
    .search-bar-input {
        padding: 10px 40px 10px 0;
    }

    #filter-select {
        padding: 10px 0;
    }
}

